# MC906

./: .gitignore  pyproject.toml
code/: README.md  convert_xlsx_csv.py
code/convert_xlsx_csv/: convert_xlsx_csv.py
code/convert_xlsx_csv/classes/: ColumnName.py  RawFile.py
csv/: AFD_clean_2021.csv  ATU_clean_2021.csv  IED_Clean_2021.csv  IRD_Clean_2021.csv  Remuneracao_clean_2020_mock_2021.csv  TDI_Clean_2021.csv  tnr_Clean_2021.csv
data/interim/: external_data.csv  ibge_pib_data.csv  social_pbf_data.csv
data/interim/2013_NCR/: TDI_CLEAN.csv  TXT_CLEAN.csv
data/interim/2014/: DSU_CLEAN.csv  HAD_CLEAN.csv  TDI_CLEAN.csv  TNR_CLEAN.csv  TXR_CLEAN.csv
data/interim/2014_NCR/: ATU_CLEAN.csv  TDI_CLEAN.csv  TXT_CLEAN.csv
data/interim/2015_NCR/: TDI_CLEAN.csv  TXR_CLEAN.csv  TXT_CLEAN.csv
data/interim/2016_NCR/: TXT_CLEAN.csv
data/interim/2017/: TNR_CLEAN.csv
data/interim/2018_NCR/: HAD_CLEAN.csv
data/interim/2019_NCR/: HAD_CLEAN.csv  TDI_CLEAN.csv  TXT_CLEAN.csv
data/processed/: complete_data.csv  final_total_total_data.csv  final_total_total_data_fun.csv  final_total_total_data_med.csv  only_total_data.csv  total_total_data.csv  total_total_data_fun.csv  total_total_data_med.csv
data/raw/: vis_data_3_pbf.csv
legacy/: build_counties_pib_data.ipynb  master_data_2021_v3.csv
merge/: concatenate.py  master_data_2021.csv  master_data_2021_v3.csv
merge/csv/: Tx_transicao_Clean_2021.csv  inse_clean_2021.csv
notebooks/: data_analysis.ipynb  data_extraction.ipynb  data_processing.ipynb  random_forest.ipynb  shap_analysis.ipynb
(+68 files in other folders)
