[tool.poetry]
name = "mc906"
version = "0.1.0"
description = ""
authors = ["Cristiano <cristianosampaio16@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
itables = "^2.0.1"
scikit-learn = "^1.4.2"
odfpy = "^1.4.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
